# atleta_test

./: README.md  parced_config.py  pyproject.toml  pytest.ini
MetaMask/: manifest.json
components/modals/: wallet_connect.py
page_factory/: button.py  component.py  input.py
pages/: base_page.py  mm.py  pool_page.py  staking_page.py
src/: mm.py  parced_config.py
tests/: configurations.py  conftest.py  test_first.py
